--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
   "name": "youvibe-backend",
   "version": "1.0.0",
-  "description": "Backend for YouVibe social media platform",
+  "description": "Backend for YouVibe project",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.0",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3",
-    "socket.io": "^4.7.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.3",
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.3"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
