--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "youvibe-backend",
+  "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
@@ -10,14 +10,15 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
-    "socket.io": "^4.7.2",
-    "stripe": "^12.20.0"
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.5",
+    "stripe": "^14.20.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.0"
   }
 }
