--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
+MONGO_URI=mongodb+srv://Youvibe_admin:6020531097Dh@youvibe.kkcq2sr.mongodb.net/?retryWrites=true&w=majority&appName=Youvibe
+JWT_SECRET=SuperSecretKey_ChangeThis123
 PORT=5000
-MONGO_URI=your_mongodb_atlas_connection
-JWT_SECRET=your_jwt_secret
-STRIPE_SECRET=your_stripe_secret
-OPENAI_API_KEY=your_openai_key
